--- a/app/src/main/res/layout/activity_kycactivity.xml
+++ b/app/src/main/res/layout/activity_kycactivity.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".WalletPackage.KYCActivity">
+    tools:context=".KYC.KYCActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
