--- a/app/src/main/res/layout/selected_players.xml
+++ b/app/src/main/res/layout/selected_players.xml
@@ -24,12 +24,15 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="top"
                 android:layout_weight=".2"
+                android:textSize="9sp"
+                android:textStyle="bold"
                 android:drawableTop="@drawable/ic_baseline_info_24"
                 android:gravity="center"
                 android:textColor="@color/black" />
 
             <ImageView
                 android:id="@+id/playerImg"
+                android:src="@drawable/ic_baseline_person_3"
                 android:layout_width="55dp"
                 android:layout_height="60dp" />
 
@@ -38,23 +41,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="1"
+                android:layout_weight="1.5"
                 android:gravity="center"
-                android:textSize="8sp"
+                android:textColor="@color/black"
+                android:textSize="12sp"
                 android:textStyle="bold" />
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="2" />
+                android:layout_weight="1.5" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="10dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="2"
                 android:gravity="center"
-                android:text="Points" />
+                android:text="0" />
 
             <View
                 android:layout_width="0dp"
@@ -77,7 +81,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="10dp"
-                    android:text="0"
+                    android:text="8.0"
                     android:textColor="@color/black" />
 
                 <ImageView
